Documents Manifest struct, un-exports a few functions, renames a few fields

--- a/src/other/install/trueBlocks.toml
+++ b/src/other/install/trueBlocks.toml
@@ -13,8 +13,8 @@ indexPath = ""
 [chains.mainnet]
 apiProvider = "http://localhost:8080"
 chainId = "1"
+ipfsGateway = "https://ipfs.unchainedindex.io/ipfs/"
 localExplorer = "http://localhost:1234"
-pinGateway = "https://ipfs.unchainedindex.io/ipfs/"
 remoteExplorer = "https://etherscan.io"
 rpcProvider = "http://localhost:8545"
 symbol = "ETH"
@@ -22,8 +22,8 @@ symbol = "ETH"
 [chains.gnosis]
 apiProvider = "http://localhost:8080"
 chainId = "100"
+ipfsGateway = "https://ipfs.unchainedindex.io/ipfs/"
 localExplorer = "http://localhost:1234"
-pinGateway = "https://ipfs.unchainedindex.io/ipfs/"
 remoteExplorer = "https://blockscout.com/xdai/mainnet"
 rpcProvider = "https://rpc.gnosischain.com"
 symbol = "XDAI"
@@ -31,8 +31,8 @@ symbol = "XDAI"
 [chains.sepolia]
 apiProvider = "http://localhost:8080"
 chainId = "11155111"
+ipfsGateway = "https://ipfs.unchainedindex.io/ipfs/"
 localExplorer = "http://localhost:1234"
-pinGateway = "https://ipfs.unchainedindex.io/ipfs/"
 remoteExplorer = "http://localhost:1234"
 rpcProvider = "http://localhost:8548"
 symbol = "ETH"
@@ -40,8 +40,8 @@ symbol = "ETH"
 [chains.goerli]
 apiProvider = "http://localhost:8080"
 chainId = "5"
+ipfsGateway = "<not_set>"
 localExplorer = "http://localhost:1234"
-pinGateway = "<not_set>"
 remoteExplorer = "https://goerli.etherscan.io"
 rpcProvider = "https://goerli-light.eth.linkpool.io"
 symbol = "ETH"
@@ -49,8 +49,8 @@ symbol = "ETH"
 [chains.kovan]
 apiProvider = "http://localhost:8080"
 chainId = "42"
+ipfsGateway = "<not_set>"
 localExplorer = "http://localhost:1234"
-pinGateway = "<not_set>"
 remoteExplorer = "https://kovan.etherscan.io"
 rpcProvider = "https://kovan.poa.network"
 symbol = "ETH"
@@ -58,8 +58,8 @@ symbol = "ETH"
 [chains.optimism]
 apiProvider = "http://localhost:8080"
 chainId = "10"
+ipfsGateway = "<not_set>"
 localExplorer = "http://localhost:1234"
-pinGateway = "<not_set>"
 remoteExplorer = "https://optimistic.etherscan.io"
 rpcProvider = "https://mainnet.optimism.io"
 symbol = "OPT"
@@ -67,8 +67,8 @@ symbol = "OPT"
 [chains.polygon]
 apiProvider = "http://localhost:8080"
 chainId = "80001"
+ipfsGateway = "<not_set>"
 localExplorer = "http://localhost:1234"
-pinGateway = "<not_set>"
 remoteExplorer = "https://mumbai.polygonscan.com"
 rpcProvider = "https://rpc-mumbai.maticvigil.com"
 symbol = "MATIC"
@@ -76,8 +76,8 @@ symbol = "MATIC"
 [chains.rinkeby]
 apiProvider = "http://localhost:8080"
 chainId = "4"
+ipfsGateway = "<not_set>"
 localExplorer = "http://localhost:1234"
-pinGateway = "<not_set>"
 remoteExplorer = "https://rinkeby.etherscan.io"
 rpcProvider = "https://rinkeby-light.eth.linkpool.io"
 symbol = "ETH"
@@ -85,8 +85,8 @@ symbol = "ETH"
 [chains.ropsten]
 apiProvider = "http://localhost:8080"
 chainId = "3"
+ipfsGateway = "<not_set>"
 localExplorer = "http://localhost:1234"
-pinGateway = "<not_set>"
 remoteExplorer = "https://ropsten.etherscan.io"
 rpcProvider = "https://ropsten.infura.io/v3/9aa3d95b3bc440fa88ea12eaa4456161"
 symbol = "ETH"
