Removes DOCKER_MODE environment variable

--- a/src/other/install/trueBlocks.toml
+++ b/src/other/install/trueBlocks.toml
@@ -22,7 +22,7 @@ symbol = "ETH"
 [chains.gnosis]
 apiProvider = "http://localhost:8080"
 chainId = "100"
-ipfsGateway = "https://ipfs.unchainedindex.io/ipfs/"
+ipfsGateway = "https://gnosis.unchainedindex.io/ipfs/"
 localExplorer = "http://localhost:1234"
 remoteExplorer = "https://blockscout.com/xdai/mainnet"
 rpcProvider = "https://rpc.gnosischain.com"
@@ -31,7 +31,7 @@ symbol = "XDAI"
 [chains.sepolia]
 apiProvider = "http://localhost:8080"
 chainId = "11155111"
-ipfsGateway = "https://ipfs.unchainedindex.io/ipfs/"
+ipfsGateway = "https://sepolia.unchainedindex.io/ipfs/"
 localExplorer = "http://localhost:1234"
 remoteExplorer = "http://localhost:1234"
 rpcProvider = "http://localhost:8548"
