--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -59,7 +59,7 @@ endif()
 
 # ----------------------------------------------------------------------------------------
 # Linkable libraries
-set(BASE_LIBS cache pin acct ether util ${CURL_LIBRARIES})
+set(BASE_LIBS cache acct ether util ${CURL_LIBRARIES})
 
 # ----------------------------------------------------------------------------------------
 # Base included paths
@@ -67,7 +67,6 @@ set(BASE_INCLUDE
     "${CMAKE_SOURCE_DIR}/libs/utillib"
     "${CMAKE_SOURCE_DIR}/libs/etherlib"
     "${CMAKE_SOURCE_DIR}/libs/acctlib"
-    "${CMAKE_SOURCE_DIR}/libs/pinlib"
     "${CMAKE_SOURCE_DIR}/libs/cachelib")
 
 # ----------------------------------------------------------------------------------------
