--- a/src/other/install/per-chain/mainnet/manifest.json
+++ b/src/other/install/per-chain/mainnet/manifest.json
@@ -2,7 +2,7 @@
   "version": "trueblocks-core@v0.40.0",
   "chain": "mainnet",
   "schemas": "QmUou7zX2g2tY58LP1A2GyP5RF9nbJsoxKTp299ah3svgb",
-  "databases": "QmdhwFJCydLjfiJjWv6himcf3d7cF2nkzLCQm88vFtzhVE",
+  "databases": "QmdbneNfc71x8QpPMXqYxEcyiEheGgd3mv5wwHEoX2VjEs",
   "chunks": [
     {
       "range": "000000000-000000000",
@@ -15143,6 +15143,76 @@
       "range": "015336632-015339404",
       "bloomHash": "QmPCLKaNHcWjZwXnx9QraV4KQx27NPqbV3jFzeRDrDu7Ej",
       "indexHash": "QmRB8H7gEKnLrv29rRsJjxsN8U5uahvAJVYdPySSQbQnik"
+    },
+    {
+      "range": "015339405-015342184",
+      "bloomHash": "Qmc7oZQ83TXSCiqqS6kSw3sJWyj5VJCKEtqKzvP2TNyX6H",
+      "indexHash": "QmNtexECdC1DXqDYCsiAs9QrR2uG7r6gWvPZDTddT81HWZ"
+    },
+    {
+      "range": "015342185-015345032",
+      "bloomHash": "QmYwFSVBhui29bEhsftn1wsoNqWArqmnuFJBNbPYzmK21t",
+      "indexHash": "Qmd5Kdn6wvoyrVuWnVPzKi5RALfzS9htzHZtTFbM9UFqM9"
+    },
+    {
+      "range": "015345033-015347893",
+      "bloomHash": "QmXwBZPwQAwP6AcooDsTo1g9NyyAE68VMfC2juVG5WWi1B",
+      "indexHash": "QmWBYD644MEQndqBKfTLr5kauaEYf3ctQMxjmGiAMuZGD3"
+    },
+    {
+      "range": "015347894-015350841",
+      "bloomHash": "QmWjjvxgjRiMehjJePLufGthxVAYEk9eBQTsGpQC8UgpFX",
+      "indexHash": "QmcAXTcKBBH7RtE3ZdaSiqsQoy6iUVturNucdvHiEo4Zg6"
+    },
+    {
+      "range": "015350842-015353628",
+      "bloomHash": "QmeRpr2fqYVMfXxUbjn4szrUbn5Wz4o27vsth9bAwZoBVb",
+      "indexHash": "QmYfP231ns2FLvVCXCEfqjBUHYcfAFBdeFnBQFt9WrPGW4"
+    },
+    {
+      "range": "015353629-015356592",
+      "bloomHash": "QmW6FEZn9psE7Hand97hV9WF6n2XoiWzYDKwHrGsATBqrJ",
+      "indexHash": "QmRBLiHQZwyBX1XUnAY6WXh96yTZ4E66XmpzbPFvrDKSuw"
+    },
+    {
+      "range": "015356593-015359340",
+      "bloomHash": "QmNXjqqoioTMYxgDAwJYx8FjFY7yj3vBi2ox1HHRdUrB3c",
+      "indexHash": "QmfH7PvuB5kRQnUDoM3Q1CdWHVBoyb3c8viXNuApyZ1W8D"
+    },
+    {
+      "range": "015359341-015362284",
+      "bloomHash": "QmYp9ANzpRP5x2bDJzySWzsb4iHESU2qhZ1ws7ot6bvKHW",
+      "indexHash": "QmYFYpsTMpUQeaJpyr89KpXiqXgNRVAUmttUXFuBy6H5zd"
+    },
+    {
+      "range": "015362285-015365177",
+      "bloomHash": "QmdfqeeLoSnUEqcDVafBmV5rZmv5NDD7iYy97epxfirGXP",
+      "indexHash": "QmU2hAzz6p4tifzFo8pLiHkLfG2VZHqtFnkcyVDXydHHpo"
+    },
+    {
+      "range": "015365178-015368059",
+      "bloomHash": "QmWHG2hVqppPq4ph8Pfq6KkzMGXoc8UuGWATMr2nggQRt9",
+      "indexHash": "QmWjWhRewv1STMzNVSaNmzYrTRXF9dHz4J4Mm5spsfnMV1"
+    },
+    {
+      "range": "015368060-015370793",
+      "bloomHash": "QmUsuprN4jfwsX7tbNpjxKzk6x9yXXarNfVXzoDfYEJUmG",
+      "indexHash": "QmNgpBcXc7n8adgTiS39cPjy9St9b5z86phLegnqu1UoE2"
+    },
+    {
+      "range": "015370794-015373504",
+      "bloomHash": "QmfF4RYcVxYdbUrDXhassgeWBhafyyQKb1yB3baBBg5VCf",
+      "indexHash": "QmWAFceSpXeZzEzEbQBiZwaqndvgVWCGXmEpsRWi11rrmE"
+    },
+    {
+      "range": "015373505-015376330",
+      "bloomHash": "QmaBNAUqbSFLNph8Wy4dHJYnNzwagxvCFXkXjzCWc4BiZG",
+      "indexHash": "QmeQrmy8ZiZVGJqAQTmYvqbUZ8j8DM25ED1ibAv1AP23vE"
+    },
+    {
+      "range": "015376331-015379149",
+      "bloomHash": "QmXdGbvDYpnL5NpSyHaa19xoAnG32Jbvdo7VRycQGmA4Ud",
+      "indexHash": "QmTHAok2isSZiXmj6gjPuQJy4tkxHPCFuKupKDtbU3fMjg"
     }
   ]
 }
