--- a/docs/readmes/admin-chunks.config
+++ b/docs/readmes/admin-chunks.config
@@ -1,3 +1,3 @@
 | Item               | Type         | Default      | Description / Default |
 | ------------------ | ------------ | ------------ | --------- |
-| sleep              | float64      | NOPOS        | for --remote pinning only, seconds to sleep between calls to the endpoint |
+| sleep              | float64      | NOPOS        | for --remote pinning only, seconds to sleep between API calls |
