First real version of mainnet manifest

--- a/src/other/install/per-chain/mainnet/manifest.json
+++ b/src/other/install/per-chain/mainnet/manifest.json
@@ -2,7 +2,7 @@
   "version": "trueblocks-core@v0.40.0",
   "chain": "mainnet",
   "schemas": "QmUou7zX2g2tY58LP1A2GyP5RF9nbJsoxKTp299ah3svgb",
-  "databases": "QmdbneNfc71x8QpPMXqYxEcyiEheGgd3mv5wwHEoX2VjEs",
+  "databases": "QmWFnf5hRHtpqzarLrDy7moQQ83V8T5W1JrPiAUW36EzwB",
   "chunks": [
     {
       "range": "000000000-000000000",
@@ -15213,6 +15213,26 @@
       "range": "015376331-015379149",
       "bloomHash": "QmXdGbvDYpnL5NpSyHaa19xoAnG32Jbvdo7VRycQGmA4Ud",
       "indexHash": "QmTHAok2isSZiXmj6gjPuQJy4tkxHPCFuKupKDtbU3fMjg"
+    },
+    {
+      "range": "015379150-015381918",
+      "bloomHash": "QmcB2KiGNxBA9Ggdj8mwGjt8iehW3o4JjTKLZzfwPYwXkR",
+      "indexHash": "QmZ8DrZ2HArAomRjSUJmTWgzBS44Gn7rGuQMzzmK76bhXf"
+    },
+    {
+      "range": "015381919-015384574",
+      "bloomHash": "Qmci9wTjHN7SM1ypSBpmgd2fDpmmzHVywGserfQeVAucHU",
+      "indexHash": "QmPfVYgKkrirXFk5hYsWDC48tL9nCxtmQJf4xekKuRdxN5"
+    },
+    {
+      "range": "015384575-015387468",
+      "bloomHash": "QmVTYXGDA2KxrmdEHTwmZJmFxUySE1u7ixHGR4pjf5ksPD",
+      "indexHash": "QmU49XCKKJA1YbzeyPWEobijQ9CM2BT35ZyCXqhe5eFWb6"
+    },
+    {
+      "range": "015387469-015390371",
+      "bloomHash": "QmR8zigpXo2fm3nwzpa4zt5mT7X4HZU8e7pZfCSh8QtDKc",
+      "indexHash": "QmZ59ucxL4RLyT23EqTHjM1LCkaofuA5UWbE6CDS5gRdh4"
     }
   ]
 }
