Adds FileSize to the Chunk record data structure

--- a/src/other/install/per-chain/sepolia/manifest.json
+++ b/src/other/install/per-chain/sepolia/manifest.json
@@ -7,182 +7,254 @@
     {
       "range": "000000000-000000000",
       "bloomHash": "QmQu9Uyi7mWFt5cfsLEymvdZ2RnF37RN6fe1B7RDCSeEVJ",
-      "indexHash": "QmYi9B2tZF78rDHRQv9epvqvUiBpQF7UbzefeMMaFsvfsJ"
+      "bloomSize": 131080,
+      "indexHash": "QmYi9B2tZF78rDHRQv9epvqvUiBpQF7UbzefeMMaFsvfsJ",
+      "indexSize": 584
     },
     {
       "range": "000000001-000100000",
       "bloomHash": "QmRvoWeSgCdLrKDUUepQW9Bkf7ZmE71safARzA2uyfyfPG",
-      "indexHash": "QmPW8Xe2EuDWqqc3FTxr3ioeSxZ1cSnZ99TaJCNRXtrWtg"
+      "bloomSize": 131080,
+      "indexHash": "QmPW8Xe2EuDWqqc3FTxr3ioeSxZ1cSnZ99TaJCNRXtrWtg",
+      "indexSize": 800304
     },
     {
       "range": "000100001-000200000",
       "bloomHash": "QmNeJNVsosmHqmRb3o5BFphShN5SokMP7pJtayCMijoatJ",
-      "indexHash": "QmZxthvuRKcKEgjjimWERu7kGMH8gwTpog6zhM6RcZCfuG"
+      "bloomSize": 131080,
+      "indexHash": "QmZxthvuRKcKEgjjimWERu7kGMH8gwTpog6zhM6RcZCfuG",
+      "indexSize": 841752
     },
     {
       "range": "000200001-000300000",
       "bloomHash": "QmcczkiNcsEdYxkqaJ1Aj7gjSD8cvbeVi75DAeEm42Kz6S",
-      "indexHash": "QmZoeqAtxVkb6FkxbUcKpQ212q6hxAuacmMRNsW4kddvnf"
+      "bloomSize": 131080,
+      "indexHash": "QmZoeqAtxVkb6FkxbUcKpQ212q6hxAuacmMRNsW4kddvnf",
+      "indexSize": 836780
     },
     {
       "range": "000300001-000400000",
       "bloomHash": "QmeXXu2rwJXzHPr3h2nhu4pSVVpLYPM7p2JLGAfJpc5BWw",
-      "indexHash": "QmSGZaBnB9aRrrBxFbsfWb5x9TZXFVVYEyZtNHTJWQEZYR"
+      "bloomSize": 131080,
+      "indexHash": "QmSGZaBnB9aRrrBxFbsfWb5x9TZXFVVYEyZtNHTJWQEZYR",
+      "indexSize": 876404
     },
     {
       "range": "000400001-000500000",
       "bloomHash": "QmYPeMHNm5Z2kVxc1qqBTC96RMy5r1sZNfHNTKZD5xmnfe",
-      "indexHash": "QmVDSdVh7uJcGLKFgo6EGcA4Aompmyi7Yj8Q8H3ywzB3jr"
+      "bloomSize": 131080,
+      "indexHash": "QmVDSdVh7uJcGLKFgo6EGcA4Aompmyi7Yj8Q8H3ywzB3jr",
+      "indexSize": 820356
     },
     {
       "range": "000500001-000600000",
       "bloomHash": "QmXws3t1ysmhP3ho8LcGk43YzBoKVWTJJ7pRpxrSmi31m9",
-      "indexHash": "QmYAawEtBgfcPXWnFcpY9UneQVxZBzZrJL7hHDmmySWk76"
+      "bloomSize": 131080,
+      "indexHash": "QmYAawEtBgfcPXWnFcpY9UneQVxZBzZrJL7hHDmmySWk76",
+      "indexSize": 824196
     },
     {
       "range": "000600001-000700000",
       "bloomHash": "QmeAZUFamAjSWQVcXfaj2KV9HRztaM3LVCswb5fFRJjybH",
-      "indexHash": "QmREtRXFQ7dpG2PadwAiAhxup9ivyFuS1ko6wccMVwv9gT"
+      "bloomSize": 131080,
+      "indexHash": "QmREtRXFQ7dpG2PadwAiAhxup9ivyFuS1ko6wccMVwv9gT",
+      "indexSize": 822084
     },
     {
       "range": "000700001-000800000",
       "bloomHash": "QmaHTHTdk9LtXeHjC8GmHFM2LXeXEkkvboeRi7ahoDzLmo",
-      "indexHash": "QmXv3b8HbLSv9kDoTWwv7G2FFtPSJom6tfYrX7FLqXVzRt"
+      "bloomSize": 131080,
+      "indexHash": "QmXv3b8HbLSv9kDoTWwv7G2FFtPSJom6tfYrX7FLqXVzRt",
+      "indexSize": 894172
     },
     {
       "range": "000800001-000900000",
       "bloomHash": "QmZ6p6jjmypXNcsCdmj4ou8bEtJ6sXmVEgg838m6a3NPep",
-      "indexHash": "QmXdEjjQCrzhfTBGkswTY9T9wbDDHwsKAdG9jsK4zCDR9y"
+      "bloomSize": 131080,
+      "indexHash": "QmXdEjjQCrzhfTBGkswTY9T9wbDDHwsKAdG9jsK4zCDR9y",
+      "indexSize": 1678172
     },
     {
       "range": "000900001-001000000",
       "bloomHash": "QmNN112CprdXGPCR6U57D87G2ZX2vAwxwPiVsDw25vkran",
-      "indexHash": "QmWDSTH3cuP4byjJVcUhNrts5tjgUou2e4Q1PQd71bqaJg"
+      "bloomSize": 131080,
+      "indexHash": "QmWDSTH3cuP4byjJVcUhNrts5tjgUou2e4Q1PQd71bqaJg",
+      "indexSize": 826348
     },
     {
       "range": "001000001-001100000",
       "bloomHash": "QmYsu2CxeknuMWbaLXDfaTfMBDBgf6yU9ZR64dVzP56HjN",
-      "indexHash": "QmdAJoaR72YqysHKhxd2hHgeK7V9gGVbZjDV6nxQf8KDBW"
+      "bloomSize": 131080,
+      "indexHash": "QmdAJoaR72YqysHKhxd2hHgeK7V9gGVbZjDV6nxQf8KDBW",
+      "indexSize": 832788
     },
     {
       "range": "001100001-001191804",
       "bloomHash": "QmQTv3Cpx4MPrtgoWLMKG84JhfcgaFtSroNf5iEzhwbLi9",
-      "indexHash": "Qme2yRifQ9uZbUdWiK6YtByfMu7jErSkkycc8QWwbAEX8v"
+      "bloomSize": 131080,
+      "indexHash": "Qme2yRifQ9uZbUdWiK6YtByfMu7jErSkkycc8QWwbAEX8v",
+      "indexSize": 1833996
     },
     {
       "range": "001191805-001200000",
       "bloomHash": "QmRZs7ik7hNVc7qbSbMMKTYzkgSRM8E6ihAjngWcinXFBc",
-      "indexHash": "QmXvQxshnNzLifRyL94BbpRzmWj9QkRbkZRJkqndm4vY5G"
+      "bloomSize": 131080,
+      "indexHash": "QmXvQxshnNzLifRyL94BbpRzmWj9QkRbkZRJkqndm4vY5G",
+      "indexSize": 292984
     },
     {
       "range": "001200001-001258925",
       "bloomHash": "QmVtTuPAbyUSxeJa6gyaFiBTQDY1izpHpYgDRdbbeyeaKG",
-      "indexHash": "QmboVaCtB4v6cVGNMDEg3fny1p3CJMViYMELMmQnn398mD"
+      "bloomSize": 131080,
+      "indexHash": "QmboVaCtB4v6cVGNMDEg3fny1p3CJMViYMELMmQnn398mD",
+      "indexSize": 2043564
     },
     {
       "range": "001258926-001275447",
       "bloomHash": "QmUfsiS1jvDRze5VHSbJHBHgcTMH2NTYpHU9vPWQTGA79E",
-      "indexHash": "QmWY1KY9azpTcB89icyM6VfPfjwtwF4B1mdwtJYNCBKzG6"
+      "bloomSize": 131080,
+      "indexHash": "QmWY1KY9azpTcB89icyM6VfPfjwtwF4B1mdwtJYNCBKzG6",
+      "indexSize": 2137028
     },
     {
       "range": "001275448-001293271",
       "bloomHash": "QmYhEmP6SXw9WJzteGWRQzXh1rcU6Xp5WhYor2c6w2dn8B",
-      "indexHash": "QmaePjMbqucwrR33QSwvgYv9r9w2WPuwZSaS57wrkZvQU1"
+      "bloomSize": 131080,
+      "indexHash": "QmaePjMbqucwrR33QSwvgYv9r9w2WPuwZSaS57wrkZvQU1",
+      "indexSize": 2425328
     },
     {
       "range": "001293272-001300000",
       "bloomHash": "Qmb8ZUFkCRwoaEPgrv1QxoFxMPyXyULv9GqakwCKcpu4sj",
-      "indexHash": "QmTRGCWeF79vnrq7ec5HjDe9ft4eXAxXSrE2Ewz25NxEus"
+      "bloomSize": 131080,
+      "indexHash": "QmTRGCWeF79vnrq7ec5HjDe9ft4eXAxXSrE2Ewz25NxEus",
+      "indexSize": 660564
     },
     {
       "range": "001300001-001330202",
       "bloomHash": "QmPJvFCmZGjLTR4mm4iF523Jw68tpXG3fTGknDZMopsmFx",
-      "indexHash": "QmbxVgArnEuVJARwRyioAqhjNVaPvySPGzvATT92wh62VK"
+      "bloomSize": 131080,
+      "indexHash": "QmbxVgArnEuVJARwRyioAqhjNVaPvySPGzvATT92wh62VK",
+      "indexSize": 2042072
     },
     {
       "range": "001330203-001392563",
       "bloomHash": "QmeBt5JdEvb7ivhsrKhLBcN1q6cgdKL9zsjgY2MdkVYJdD",
-      "indexHash": "Qma2pUD7edi8GebbP3635qoWJCt9cUCbvg5XzHh7faH5og"
+      "bloomSize": 131080,
+      "indexHash": "Qma2pUD7edi8GebbP3635qoWJCt9cUCbvg5XzHh7faH5og",
+      "indexSize": 1903524
     },
     {
       "range": "001392564-001400000",
       "bloomHash": "QmUGETAAnmiAa7k1ymoJrjvm8Ea6VcnxYh9LsUbckqGbrq",
-      "indexHash": "QmerEF5xWDZKYnJxZ57rYnM9cvEtUJKB9Zyx28fNDByVZ8"
+      "bloomSize": 131080,
+      "indexHash": "QmerEF5xWDZKYnJxZ57rYnM9cvEtUJKB9Zyx28fNDByVZ8",
+      "indexSize": 566216
     },
     {
       "range": "001400001-001417469",
       "bloomHash": "QmWuKhDt5GY7heuJVPHAUzzzWVfFDScZBVxSjt8d2EEWKz",
-      "indexHash": "QmYxoj1Mq3ckZ8VJeT5JeD1sLf9AZmmNrSDUhdDWcyKKbu"
+      "bloomSize": 131080,
+      "indexHash": "QmYxoj1Mq3ckZ8VJeT5JeD1sLf9AZmmNrSDUhdDWcyKKbu",
+      "indexSize": 1742956
     },
     {
       "range": "001417470-001438931",
       "bloomHash": "QmV1LYX9rBS2xYEZmnEgyHTWDex7xtFfyJuZPNbo83UU6h",
-      "indexHash": "QmXqdstLSHJKBBubVrCdRv853vfbzHMfVEaY6i6VCp4nYd"
+      "bloomSize": 131080,
+      "indexHash": "QmXqdstLSHJKBBubVrCdRv853vfbzHMfVEaY6i6VCp4nYd",
+      "indexSize": 1664044
     },
     {
       "range": "001438932-001473758",
       "bloomHash": "QmRWc1fnVw893xYbhKpK8gpn21UJsjDLRJCBsi9fJgELFf",
-      "indexHash": "QmQoRpALhycNGK9fF2r9WFeg2tfZ4T8GE5g4zthkaqFm5G"
+      "bloomSize": 131080,
+      "indexHash": "QmQoRpALhycNGK9fF2r9WFeg2tfZ4T8GE5g4zthkaqFm5G",
+      "indexSize": 1703364
     },
     {
       "range": "001473759-001500000",
       "bloomHash": "Qme17xj9BHgMB3ETiqfBLdhUvzpRycpb3gZWW2ASEuLexg",
-      "indexHash": "QmWd2CAamvnbfGXPYP54RYwYCEoaommwyJ4BztFPxuuBVQ"
+      "bloomSize": 131080,
+      "indexHash": "QmWd2CAamvnbfGXPYP54RYwYCEoaommwyJ4BztFPxuuBVQ",
+      "indexSize": 475140
     },
     {
       "range": "001500001-001544921",
       "bloomHash": "QmR7SGEKzXJzTvtHjoExfh1tUusKTbZVUrdjy2Fsg5sJBC",
-      "indexHash": "QmPBMhaxre3N1vjgUtGDdPGtg5BP5NKZSdQX9JAiFhwSzd"
+      "bloomSize": 131080,
+      "indexHash": "QmPBMhaxre3N1vjgUtGDdPGtg5BP5NKZSdQX9JAiFhwSzd",
+      "indexSize": 1630516
     },
     {
       "range": "001544922-001568820",
       "bloomHash": "QmUS18rByLyJrYh1aLwXx9NHESQQAARCNdGA5smzQbJWhm",
-      "indexHash": "QmbdZri6hhRXuttgQNRWQHkpaG4ZSCE8ZsgCCsJmacymaP"
+      "bloomSize": 131080,
+      "indexHash": "QmbdZri6hhRXuttgQNRWQHkpaG4ZSCE8ZsgCCsJmacymaP",
+      "indexSize": 1622784
     },
     {
       "range": "001568821-001592424",
       "bloomHash": "QmfDQWicMBjbkeh6RkdSNTPstcVER846hjmCbmag8YGaFB",
-      "indexHash": "QmdxfzPPTJ6QkqN9JNveQwgCd6RnWHYVURu7cCURthr8qf"
+      "bloomSize": 131080,
+      "indexHash": "QmdxfzPPTJ6QkqN9JNveQwgCd6RnWHYVURu7cCURthr8qf",
+      "indexSize": 1622888
     },
     {
       "range": "001592425-001600000",
       "bloomHash": "QmeXS4QzBXXiiTgfttgjuJMkH5FJBZ1NwgYUr77hZvbPT7",
-      "indexHash": "QmUAE1Z3BBfFwe7CMyvJdoGehPursJz6jfkDhtvsUpFGNj"
+      "bloomSize": 131080,
+      "indexHash": "QmUAE1Z3BBfFwe7CMyvJdoGehPursJz6jfkDhtvsUpFGNj",
+      "indexSize": 516748
     },
     {
       "range": "001600001-001625617",
       "bloomHash": "QmYkvLKLKK7XPccGh3Pie9b9t7g76iNrARCQb219vY8a9k",
-      "indexHash": "QmZV61o5W9DKyJTSxwpSNJF4qHUbJjJQcdBMRWGxSZNHQZ"
+      "bloomSize": 131080,
+      "indexHash": "QmZV61o5W9DKyJTSxwpSNJF4qHUbJjJQcdBMRWGxSZNHQZ",
+      "indexSize": 1619712
     },
     {
       "range": "001625618-001648608",
       "bloomHash": "QmZzH45GEnKNgBH8TAtgPYC7Bsohdzngsgg2dFNUPMNiZj",
-      "indexHash": "QmRshSRy7QDYWdCkLFaBQgSjJaWBXmhaj48758TRt2jpmz"
+      "bloomSize": 131080,
+      "indexHash": "QmRshSRy7QDYWdCkLFaBQgSjJaWBXmhaj48758TRt2jpmz",
+      "indexSize": 1708880
     },
     {
       "range": "001648609-001664007",
       "bloomHash": "QmTRiD4qCDf9aTiyzVk2aXWvNCEcFhdfcS8Jxy7CGeWjqu",
-      "indexHash": "QmUNVRzr4bhDjW1npVFGgrNg4WZtmwLtGpKxStSfX6JePp"
+      "bloomSize": 131080,
+      "indexHash": "QmUNVRzr4bhDjW1npVFGgrNg4WZtmwLtGpKxStSfX6JePp",
+      "indexSize": 1678088
     },
     {
       "range": "001664008-001675127",
       "bloomHash": "QmaYy6VdUTg4SX8Jzb2Zh9CqTfpLkdkzx3ked9yuFTaGqx",
-      "indexHash": "Qmcts6i6hVcR2mFwt5m2tc9jjJGsrXzY6iNujZ4jLzF8Hx"
+      "bloomSize": 131080,
+      "indexHash": "Qmcts6i6hVcR2mFwt5m2tc9jjJGsrXzY6iNujZ4jLzF8Hx",
+      "indexSize": 1745580
     },
     {
       "range": "001675128-001690553",
       "bloomHash": "QmUk4FTTbX5mr9mLoiCJHF6UJVmWqNWHwtfTtBb6v9fQPw",
-      "indexHash": "QmeWUd6SdqD4Wm4qVfxaeBjhQUvCHRSfZXu9jd6jYEUB5k"
+      "bloomSize": 131080,
+      "indexHash": "QmeWUd6SdqD4Wm4qVfxaeBjhQUvCHRSfZXu9jd6jYEUB5k",
+      "indexSize": 2460256
     },
     {
       "range": "001690554-001700000",
       "bloomHash": "QmZJQefvRNqcjmB2PXdRR5YTtMiEhgv2pTyaWGqYT7bAsy",
-      "indexHash": "QmUhzKPTKszhXQBb5gWLq69uEgvV5JhEpFchMCXKeBQuS9"
+      "bloomSize": 131080,
+      "indexHash": "QmUhzKPTKszhXQBb5gWLq69uEgvV5JhEpFchMCXKeBQuS9",
+      "indexSize": 1078404
     },
     {
       "range": "001700001-001715706",
       "bloomHash": "QmYLuuQqtuAbyAjaYzrLzSVjFB3GS3Hn87xEGWYSfSBPbL",
-      "indexHash": "QmXZpYiLC7LNRh9DWpxg9Un9Hf4R54uGr32WL866MM6Wmg"
+      "bloomSize": 131080,
+      "indexHash": "QmXZpYiLC7LNRh9DWpxg9Un9Hf4R54uGr32WL866MM6Wmg",
+      "indexSize": 1804420
     }
   ]
 }
