Final pinning when scraping?

--- a/src/other/install/per-chain/mainnet/manifest.json
+++ b/src/other/install/per-chain/mainnet/manifest.json
@@ -21325,6 +21325,83 @@
       "bloomSize": 1048612,
       "indexHash": "QmZ59ucxL4RLyT23EqTHjM1LCkaofuA5UWbE6CDS5gRdh4",
       "indexSize": 26578316
+    },
+    {
+      "range": "015393248-015396112",
+      "bloomHash": "QmaYBATjgkhCkdxqsEkSdxsqD78zPV6fD28ZiUjvAPEd1D",
+      "bloomSize": 1048612,
+      "indexHash": "QmTqfNfaWsU1M4Q4F6xJNM6F4jHjY6vntM3n98UKzm1HhT",
+      "indexSize": 26371472
+    },
+    {
+      "range": "015396113-015399053",
+      "bloomHash": "QmW2Bj8VSkYZnJuvx67WJr8D8B8jR2HmnFVeje582ypjt6",
+      "bloomSize": 917536,
+      "indexHash": "QmYrYJ8VevuEqnsKqvqoQtpqQVMvKGrC7g8otSkoGjFj9A",
+      "indexSize": 25585636
+    },
+    {
+      "range": "015399054-015400000",
+      "bloomHash": "QmRDKqRaLE6yCJZNfWXZmq4k7tqLN8usLFcogdJe2GPtwz",
+      "bloomSize": 393232,
+      "indexHash": "QmcJZVUx9LdwCz9mnwqaJk6T84iRkC4R4AYZmBzTc83CfB",
+      "indexSize": 8857584
+    },
+    {
+      "range": "015400001-015402854",
+      "bloomHash": "QmSKKQXRK7BwPFdV9RP4zZ1CzeVKhg5i1of3AWPFnE364v",
+      "bloomSize": 1310764,
+      "indexHash": "QmfVimHxmHMfAyDkPEz7WypTqmsZY1GAdrDHcdxD6qL4wH",
+      "indexSize": 28699540
+    },
+    {
+      "range": "015402855-015405765",
+      "bloomHash": "QmSrGxTM4gcZP9n3vGYRXYkpi48j9td6b8h9FSj8LgdBxf",
+      "bloomSize": 917536,
+      "indexHash": "QmZQMXHhX8ZidzoRvwJTUbWT2DNfVxdt8FxUYDkwcHMDdy",
+      "indexSize": 25741232
+    },
+    {
+      "range": "015405766-015408401",
+      "bloomHash": "QmSSJnDvxLAKJen4DPwe2ZVaKLdhanqFJ1GzXfRdptLjMD",
+      "bloomSize": 1310764,
+      "indexHash": "QmctqVEo5m7qcpJaY1VPXWsF25zMQT5ySEjk5STKESev9x",
+      "indexSize": 29869884
+    },
+    {
+      "range": "015408402-015411162",
+      "bloomHash": "QmWzc3JTpyzk34awBG246zUWr5QaTXqNWKjDoYUWYNwBbR",
+      "bloomSize": 1179688,
+      "indexHash": "QmTNnEMJW8DCr6eCEed1wW9xsDsDShYwH58sP96T7oDSzJ",
+      "indexSize": 27608964
+    },
+    {
+      "range": "015411163-015414155",
+      "bloomHash": "QmRupGVM5TPa8UgJJHEMxfgiAHL4CwHJ6q83XfeowpP7PQ",
+      "bloomSize": 1048612,
+      "indexHash": "QmVWjiVfNz3HAyghJBXFAsnfmaAohHUUAcJAx1pwwBJpig",
+      "indexSize": 26148980
+    },
+    {
+      "range": "015414156-015416887",
+      "bloomHash": "QmeEP47nQN5SpbF5dsd4YfsZ19czaFWRtzuE1jDNakNtoo",
+      "bloomSize": 1048612,
+      "indexHash": "QmTQMnARjKR93tP59pdvbrouPB1pxchydBsVfv3ngvYwW9",
+      "indexSize": 26648048
+    },
+    {
+      "range": "015416888-015419775",
+      "bloomHash": "QmNzZGiJRK8iMgeYdWtRHhfixa28jSG8TBBsEiVu7GuHkW",
+      "bloomSize": 1048612,
+      "indexHash": "QmbiFSZb8zCamndWcH12whXAkZdhx4LkhN43urKpK1qYFz",
+      "indexSize": 26293380
+    },
+    {
+      "range": "015419776-015422538",
+      "bloomHash": "QmdYmybSfaWAzNWr8Y4ScMLRx7gZVLYr9LsQ5tr4Buc8xF",
+      "bloomSize": 1179688,
+      "indexHash": "QmRyd9a6h2rbGfhNd9R9RXQkn1tDt1Er5KwcT9MP6Fi6kT",
+      "indexSize": 28399292
     }
   ]
 }
