--- a/src/other/install/per-chain/mainnet/manifest.json
+++ b/src/other/install/per-chain/mainnet/manifest.json
@@ -21327,6 +21327,13 @@
       "indexSize": 26578316
     },
     {
+      "range": "015390372-015393247",
+      "bloomHash": "QmcjVBHdzBPDENDdGrJjrusFmfBM6LpjkaaLnm2X2TwLzv",
+      "bloomSize": 917536,
+      "indexHash": "QmW97zST52Q3d3nrAoenCEdo8pzSvZ8qFMw6ipFEMVhgFx",
+      "indexSize": 24986704
+    },
+    {
       "range": "015393248-015396112",
       "bloomHash": "QmaYBATjgkhCkdxqsEkSdxsqD78zPV6fD28ZiUjvAPEd1D",
       "bloomSize": 1048612,
